# Job_finder_backend

./: .gitignore  Cargo.toml  MIGRATION_INSTRUCTIONS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  environment.config.example  run_migration.sql  start.bat  start.ps1
db/: 1_create.sql  2_structure.sql  3_foreign_key.sql  README.md
migrations/: 002_add_profile_columns.sql
src/: cache.rs  config.rs  database.rs  main.rs
src/handlers/: auth.rs  health.rs  mod.rs  users.rs
src/middleware/: auth.rs  mod.rs
src/models/: auth.rs  mod.rs  user.rs
src/utils/: jwt.rs  mod.rs  password.rs  performance.rs
