[package]
name = "Job_finder_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
actix-multipart = "0.6"
actix-web-actors = "4.1"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Async Runtime
tokio = { version = "1.28", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "8.3"
bcrypt = "0.14"
uuid = { version = "1.3", features = ["v4", "serde"] }

# Environment & Configuration
dotenv = "0.15"
config = "0.14"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP Client (for external APIs)
reqwest = { version = "0.11", features = ["json"] }

# Performance
rayon = "1.7"  # Parallel processing
once_cell = "1.18"  # Global state management
num_cpus = "1.15"  # CPU detection for worker optimization

# Compression & Caching
brotli = "3.4"  # Brotli compression
flate2 = "1.0"  # Gzip compression
lru = "0.12"    # LRU cache implementation
moka = { version = "0.12", features = ["future"] }  # High-performance cache

# Memory & Performance Optimizations
mimalloc = "0.1"  # Microsoft's memory allocator (faster than default)
dashmap = "5.5"   # Concurrent HashMap
parking_lot = "0.12"  # Fast synchronization primitives

# Development dependencies
[dev-dependencies]
actix-rt = "2.9"
